# song-eater

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: tagging-second-pass.md
song_eater/: Info.plist  art.py  audio_tap.swift  cli.py  display.py  entitlements.plist  export.py  identify.py  itunes.py  llm.py  musicbrainz.py  nowplaying.py  recorder.py  retag.py
