[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "song-eater"
version = "0.1.0"
description = "Record system audio, split tracks, identify, tag, and save as MP3"
requires-python = ">=3.10,<3.13"
license = "MIT"
dependencies = [
    "sounddevice>=0.4",
    "numpy",
    "shazamio",
    "mutagen",
    "rich",
    "click",
]

[project.scripts]
song-eater = "song_eater.cli:main"
